--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,11 @@ steps:
   displayName: 'Publish the project - Release'
   inputs:
     command: 'publish'
-    projects: '**/*.csproj'
     publishWebProjects: false
+    projects: '**/*.csproj'
     arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
-    zipAfterPublish: true
+    zipAfterPublish: false
+    modifyOutputPath: false
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
