Update azure-pipelines.yml for Azure Pipelines1

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,5 +49,5 @@ steps:
     modifyOutputPath: false
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
+  displayName: 'Publish Artifact: pubart'
   condition: succeeded()
