Update azure-pipelines.yml for Azure Pipelines2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,5 +49,8 @@ steps:
     modifyOutputPath: false
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: pubart'
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'pubart1'
+    publishLocation: 'Container'
   condition: succeeded()
